refactor: switch from ament_uncrustify to clang-format
ament_uncrustify is installed with ROS, and thus depending on the installed
ROS version, the formatting was significantly different.
This already caused problems for a number of people who wanted to
contribute, because the ament_uncrustify version in CI was different from
the local one.

So this switches to clang-format, for which we can specify the version and
in my experience is more stable over different versions.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,6 +25,7 @@ repos:
       - id: check-symlinks
       - id: check-xml
       - id: check-yaml
+        args: [--allow-multiple-documents]
       - id: debug-statements
       - id: mixed-line-ending
       - id: trailing-whitespace
@@ -39,15 +40,10 @@ repos:
       -   id: flake8
 
   # CPP hooks
-  - repo: local
+  - repo: https://github.com/pre-commit/mirrors-clang-format
+    rev: 'v21.1.5'
     hooks:
-      - id: ament_uncrustify
-        name: ament_uncrustify
-        description: Format files with uncrustify.
-        entry: ament_uncrustify
-        language: system
-        files: \.(c|cc|cxx|cpp|frag|glsl|h|hpp|hxx|ih|ispc|ipp|java|js|m|proto|vert)$
-        args: ["--reformat"]
+      - id: clang-format
 
   # cmake hooks
   - repo: local
